--- a/style.css
+++ b/style.css
@@ -80,7 +80,7 @@ ul li a:hover {
 
 #falecomigo h4 {
     text-align: center;
-    color: rgba(247, 77, 219, 0.986);
+    color: rgb(40, 98, 255);
     animation: exemplo 0.8s infinite alternate; /* Animação */
 }
  /* Animação */
