--- a/style.css
+++ b/style.css
@@ -108,7 +108,7 @@ ul li a:hover {
 }
 
 #social-links a:hover {
-    background:rgba(247, 77, 218, 0.582);
+    background:rgb(40, 98, 255);
 }
 
 /* Footer */
