--- a/style.css
+++ b/style.css
@@ -35,6 +35,9 @@ h1, h3, h4, p {
 /* Tamanho da imagem avatar */
 #profile img {
     width: 142px;
+    border-radius: 50%;
+    box-shadow: 0 0 10px rgb(0, 0, 0, 0.5);
+    margin-top: 10px;
 }
 
 /* links */
